--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -7,7 +7,7 @@
 		"forceConsistentCasingInFileNames": true,
 		"strict": false,
 		"noImplicitOverride": true,
-		"noPropertyAccessFromIndexSignature": true,
+		"noPropertyAccessFromIndexSignature": false,
 		"noImplicitReturns": true,
 		"noFallthroughCasesInSwitch": true,
 		"sourceMap": true,
@@ -24,6 +24,6 @@
 		"enableI18nLegacyMessageIdFormat": false,
 		"strictInjectionParameters": true,
 		"strictInputAccessModifiers": true,
-		"strictTemplates": true
+		"strictTemplates": false
 	}
 }
